<resources>
    <string name="app_name">Daily Expense Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_income">Income</string>
    <string name="menu_cost">Cost</string>
    <string name="menu_loan">Loan</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="overview">Overview</string>
    <string name="income">Income</string>
    <string name="cost">Cost</string>
    <string name="asset">Asset</string>
    <string name="date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO Daily Expense Tracker button below to subscribe to the
        daily expense topic. Messages sent to the daily expense topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Daily Expense</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to Daily Expense topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">dailyexpense_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">DailyExpense</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">Daily Expense Message</string>

    <string name="ga_trackingId" translatable="false">285223058</string>
</resources>