<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_overview">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nandeproduction.dailycost.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.nandeproduction.dailycost.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.nandeproduction.dailycost.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_income"
        android:name="com.nandeproduction.dailycost.ui.income.IncomeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_income" />

    <fragment
        android:id="@+id/nav_overview"
        android:name="com.nandeproduction.dailycost.ui.overview.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/nav_cost"
        android:name="com.nandeproduction.dailycost.ui.cost.CostFragment"
        android:label="@string/menu_cost"
        tools:layout="@layout/fragment_cost" />
</navigation>