<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/overview_xml"
            android:title="@string/menu_overview" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/income_xml"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/nav_cost"
            android:icon="@drawable/cost_xml"
            android:title="@string/menu_cost" />
        <item
            android:id="@+id/nav_loan"
            android:icon="@drawable/loan_xml"
            android:title="@string/menu_loan" />
    </group>
</menu>