<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.overview.OverviewFragment">

    <TextView
        android:id="@+id/text_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="This Month"
                android:textAlignment="center"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:stretchColumns="*">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="@string/income"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                            <TextView
                                android:layout_width="470dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="Value"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp"/>
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="@string/cost"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                            <TextView
                                android:layout_width="470dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="Value"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="----------"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                            <TextView
                                android:layout_width="470dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="----------"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="@string/asset"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                            <TextView
                                android:layout_width="470dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="Value"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                        </TableRow>
                    </TableLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="This Year"
                android:textAlignment="center"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:stretchColumns="*">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="@string/income"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                            <TextView
                                android:layout_width="470dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="Value"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp"/>
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="@string/cost"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                            <TextView
                                android:layout_width="470dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="Value"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="----------"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                            <TextView
                                android:layout_width="470dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="----------"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="@string/asset"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                            <TextView
                                android:layout_width="470dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:text="Value"
                                android:textAlignment="center"
                                android:textColor="#000"
                                android:textColorHighlight="#000"
                                android:textSize="20sp" />
                        </TableRow>
                    </TableLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>